--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,47 @@
-# Игнорировать виртуальное окружение
+# Виртуальное окружение
 venv/
-.env/
+env/
 
-# Игнорировать настройки IDE
+# Python кэш и временные файлы
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+# Файл с секретами
+.env
+
+# Логи
+bot.log
+
+# Конфигурации IDE
+.vscode/
 .idea/
+*.iml
+
+# ОС-специфичные файлы
+.DS_Store
+Thumbs.db
+
+# Лог PyCharm (если включено логирование)
+*.log
+
+# Файлы настроек Python-проектов
+*.env
+*.ini
+*.cfg
+*.toml
+
+# Локальные базы данных (если вдруг используешь SQLite на dev)
+*.db
+*.sqlite3
+
+# Личные заметки или временные файлы
+*.bak
+*.tmp
+*.swp
+*~
+notes.txt
+TODO.md
+
+# Markdown-файлы, которые не должны попасть в клиентский билд
+arhitectura.txt
