--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# .gitignore
 # Виртуальное окружение
 venv/
 env/
@@ -45,3 +46,9 @@ TODO.md
 
 # Markdown-файлы, которые не должны попасть в клиентский билд
 arhitectura.txt
+
+# Конфиденциальный конфиг
+config.py
+
+# Структура базы данных (DDL, схемы)
+database/
